feat: user functionality + views

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -1,10 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Teko&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500&display=swap");
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Teko", sans-serif;
-	font-size: 16px;
+	font-size: 20px;
+	font-weight: 300;
 }
 
 body,
