--- a/frontend/src/scss/colors.scss
+++ b/frontend/src/scss/colors.scss
@@ -3,3 +3,6 @@ $main_darker: darken($main, 20);
 $secondary: #353535;
 $secondary_darker: darken($secondary, 20);
 $highlight: #00ff85;
+$highlight_darker: darken($highlight, 20);
+$danger: #7b0000;
+$danger_darker: darken($danger, 10);
