--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -12,3 +12,10 @@ body,
 html {
 	background-color: #212121;
 }
+::-webkit-scrollbar {
+	width: 10px;
+}
+::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background: #00ff85;
+}
