feat: doc content renderer and api interaction

--- a/frontend/src/assets/base.scss
+++ b/frontend/src/assets/base.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500&display=swap");
-* {
+@import "../scss/colors.scss";
+*:not(.markdown-viewer *) {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
