--- a/frontend/src/assets/base.scss
+++ b/frontend/src/assets/base.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500&display=swap");
 @import "../scss/colors.scss";
+@import "../scss/responsive.scss";
 *:not(.markdown-viewer *) {
 	margin: 0;
 	padding: 0;
@@ -7,6 +8,9 @@
 	font-family: "Teko", sans-serif;
 	font-size: 20px;
 	font-weight: 300;
+	@include mobile {
+		font-size: 14px;
+	}
 }
 
 body,
