--- a/frontend/src/assets/base.scss
+++ b/frontend/src/assets/base.scss
@@ -18,9 +18,9 @@ html {
 	background-color: #212121;
 }
 ::-webkit-scrollbar {
-	width: 10px;
+	width: 4px;
 }
 ::-webkit-scrollbar-thumb {
 	border-radius: 5px;
-	background: #00ff85;
+	background: $highlight;
 }
