refactor: readability changes on styles

--- a/frontend/src/assets/base.scss
+++ b/frontend/src/assets/base.scss
@@ -1,12 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cousine:wght@400;700&display=swap");
 @import "../scss/colors.scss";
 @import "../scss/responsive.scss";
 *:not(.markdown-viewer *) {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: "Teko", sans-serif;
-	font-size: 20px;
+	font-family: "Cousine", monospace;
+	font-size: 15px;
 	font-weight: 300;
 	@include mobile {
 		font-size: 14px;
